# tagua

./: .gitignore  .kateconfig  AUTHORS  BUGS  CHANGELOG  CMakeLists.txt  Doxyfile  INSTALL  MyRubyConfig.cmake  README  RELEASE  TODO  TODO_Maurizio  TODO_Paolo  TODO_Riccardo  TODO_shogi  add_language.sh  add_variant.rb  extract-messages.sh  fix_copyright.rb  mk_proj.bat  restore_from_windoze.sh  strip_font.rb  tagua.pot
cmake/: FindCPPUNIT.cmake  Tagua.cmake
data/: CMakeLists.txt
data/highlighting/: CMakeLists.txt
data/pics/: CMakeLists.txt
data/piece_icons/: .gitignore  (+1 more)
debian/: .gitignore  README.Debian  changelog  control  copyright  docs  menu  rules  tagua-data.files  tagua.files  watch
doc/: engine-intf.html
kdewidgets/: kcolorbutton.cpp  kcolorbutton.h  kcolormimedata.h  kdelibs_export.h  kfontrequester.cpp  kfontrequester.h  kpagemodel.h  kpageview.h  kpagewidget.h  kpagewidgetmodel.cpp  kpagewidgetmodel.h
lua/: CMakeLists.txt  Makefile
scripts/: highlighting.lua  hllib.lua
src/: .gitignore  CMakeLists.txt  DESIGN  Doxyfile  about.cpp  about.h  actioncollection.cpp  actioncollection.h  agent.h  agentgroup.cpp  agentgroup.h  algebraicnotation.cpp  algebraicnotation.h  animation.cpp  animation.h  animationfactory.cpp  animationfactory.h  board.cpp  board.h  boardsprite.h__  chesstable.cpp  chesstable.h  clickablecanvas.h  clock.cpp  clock.h  common.cpp  common.h  config.cxx  config.hxx  config.xsd  connection.cpp  connection.h  console.cpp  console.h  console_p.h  constrainedtext.cpp  constrainedtext.h  crash.cpp  crash.h  decoratedmove.cpp  (+182 more)
src/canvas/: abstract.h  canvas.cpp  canvas.h  group.h  item.h  picture.h  pixmap.h  rect.h  text.h  widget.cpp  widget.h
src/controllers/: abstract.cpp  abstract.h  editgame.cpp  editgame.h  editposition.cpp  editposition.h  entitytoken.cpp  entitytoken.h
src/doxy/: doxygen.css  footer.html  header.html
src/entities/: engineentity.cpp  engineentity.h  entity.cpp  entity.h  examinationentity.cpp  examinationentity.h  gamebasedentity.cpp  gamebasedentity.h  gameentity.cpp  gameentity.h  icsentity.cpp  icsentity.h  userentity.cpp  userentity.h
src/hlvariant/: animator.h  animator.impl.h  board.h  customboard.h  dropanimator.h  graphicalapi_unwrapped.h  icsapi_wrapped.h  movefactory.h  pool.h  poolcollection.h  tagua_wrapped.h  variantdata.h
src/hlvariant/chess/: actions.cpp  actions.h  gamestate.cpp  gamestate.h  icsverbose.cpp  icsverbose.h  legalitycheck.h  move.cpp  move.h  movegenerator.h  piece.cpp  piece.h  san.cpp  san.h  serializer.h  variant.cpp  variant.h
src/hlvariant/crazyhouse/: gamestate.h  legalitycheck.h  move.h  movefactory.h  movegenerator.h  piece.cpp  piece.h  serializer.h  variant.cpp  variant.h
src/hlvariant/dummy/: gamestate.h  legalitycheck.h  movegenerator.h  variant.cpp  variant.h
src/hlvariant/minichess5/: variant.cpp  variant.h
src/hlvariant/minishogi/: gamestate.h  variant.cpp  variant.h
src/hlvariant/sho-shogi/: gamestate.h  legalitycheck.h  variant.cpp  variant.h
src/hlvariant/shogi/: gamestate.h  legalitycheck.h  piece.cpp  piece.h  serializer.h  shogiactions.cpp  shogiactions.h  shogiban.h  variant.cpp  variant.h
src/hlvariant/tori-shogi/: gamestate.h  legalitycheck.h  piece.cpp  piece.h  serializer.h  variant.cpp  variant.h
src/loader/: context.cpp  context.h  image.cpp  image.h  theme.cpp  theme.h
src/luaapi/: genericwrapper.cpp  genericwrapper.h  imaging.cpp  imaging.h  lfunclib.c  lfunclib.h  loader.cpp  loader.h  luahl.cpp  luahl.h  luavalue.cpp  luavalue.h  options.cpp  options.h
src/ui/: about.ui  gametags.ui  newgamedialog.ui  pref_board.ui  pref_engines.ui  pref_highlight.ui  pref_movelist.ui  pref_theme.ui  pref_theme_page.ui  preferences.ui  quickconnect.ui
src/variants/: atomic.cpp  atomic.cpp_  atomic.h_  chainreaction.cpp  chainreaction.cpp_  chainreaction.h_  chess.cpp  chess.h  connect4.cpp  connect4.h  connect4.h_  crazyhouse.cpp  crazyhouse.h  crazyhouse_p.h  crazyhouse_p.h_  dummy.cpp  dummy.cpp_  dummy.h  dummy.h_  kboard.rb  king4pawns.cpp  king4pawns.cpp_  king4pawns.h_  progressive.cpp  progressive.cpp_  progressive.h  reversi.cpp  reversi.h_  rubyvariant.cpp  rubyvariant.cpp_  rubyvariant.h_  shogi.cpp  shogi.cpp_  shogi.h  suicide.h__  tagua.rb  tictactoe.rb  trivialanimator.h  trivialanimator.h_  ultima.cpp__  (+6 more)
src/variants/xchess/: animator.cpp  animator.h  animator.impl.h  dropanimator.h  dropanimator.impl.h  generator.h  move.cpp  move.h  piece.cpp  piece.h  piecetype.h  pool.h  position.h
templates/: variant_template.cpp.erb  variant_template.h.erb
tests/: .gitignore  CMakeLists.txt  add_test.rb  cppunit_main.cpp  kovacevic_keene_1973.pgn  test.lua  test_canvas.cpp  test_lua.cpp  test_pgn.pgn  test_weakset.cpp
tests/hlvariants/: CMakeLists.txt  boardtest.cpp  boardtest.h  chessgamestatetest.cpp  chessgamestatetest.h  chesslegalitytest.cpp  chesslegalitytest.h  chessmovetest.cpp  chessmovetest.h  chesspiecetest.cpp  chesspiecetest.h  chessserializationtest.cpp  chessserializationtest.h  chesswrappedtest.cpp  chesswrappedtest.h  pooltest.cpp  pooltest.h  shogideserializationtest.cpp  shogideserializationtest.h
tests/hlvariants/prototype/: board.h  tagua_wrapped.h
tests/hlvariants/prototype/chess/: gamestate.cpp  gamestate.h  legalitycheck.h  move.cpp  move.h  movegenerator.h  piece.cpp  piece.h  san.cpp  san.h  serializer.h  variant.cpp  variant.h
tests/luaimage/: CMakeLists.txt  data  foreach.hpp  global.h  hline.cpp  hline.h  imageeffects.h  loader  luaapi  maintest.lua  option.cpp  option_p.h  settings.cpp  test.cpp  test.lua
tests/movelist/: CMakeLists.txt  canvas  index.cpp  index.h  main.cpp  movelist.cpp  movelist_notifier.h  movelist_p.h  movelist_table.cpp  movelist_table.h  movelist_textual.cpp  movelist_textual.h  movelist_widget.cpp  movelist_widget.h
tests/settings/: .gitignore  CMakeLists.txt  common.h  global.cpp  settingstest.cpp  settingstest.h  test.cpp
tests/weak_set/: CMakeLists.txt  test_weakset.cpp  weakset.h  weakset_test.cpp  weakset_test.h
translations/: CMakeLists.txt  cs.po  fr.po
(+269 files in other folders)
